Fix TFMGUtils#spawnElectricParticles and some other minor things